--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_stupla">Stundenplan</string>
     <string name="previous_week">Vorherige Woche</string>
     <string name="next_week">Nächste Woche</string>
+    <string name="showing_next_week">Stundenplan für nächste Woche wird angezeigt (weil heute Sonntag ist)</string>
 </resources>
