--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_stupla">Time table</string>
     <string name="previous_week">Previous week</string>
     <string name="next_week">Next week</string>
+    <string name="showing_next_week">Showing the next week (because it is Sunday)</string>
 </resources>
