--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="previous_week">Previous week</string>
     <string name="next_week">Next week</string>
     <string name="showing_next_week">Showing the next week (because it is Sunday)</string>
+    <string name="server_cant_provide_service">The server is currently not able to fulfill it\'s task.</string>
 </resources>
